@@ -102,4 +102,5 @@ Rob Fanner		rfanner@stonethree.com
 					Bug fix.
 Michael Johnson 	michaelj@maine.rr.com
 					Bug fix.
-
+Nicolas Barry		boozai@yahoo.com
+					Bug fix.
